# postgres-datetime

./: CMakeLists.txt  Cargo.toml  data.sql  shell.nix
src/: datetime.rs  datetime_raw.rs  lib.rs  tz.rs
tests/: parse.rs  testdata
tests/testdata/: decode  parse
