[package]
name = "postgres-datetime"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
bitmask = "0.5"
chrono-tz = { version = "0.8", features = ["std", "case-insensitive"] }
chrono = "0.4"
once_cell = "1"

[dev-dependencies]
datadriven = "0.6"
